--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,9 @@ Depends:
     R (>= 3.2)
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.0.1
+Imports: 
+    dplyr,
+    magrittr,
+    rlang,
+    tibble
