--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,11 @@
 
 S3method(print,rbin_equal_freq)
 S3method(print,rbin_equal_length)
+S3method(print,rbin_manual)
 S3method(rbin_equal_freq,default)
 export(rbin_equal_freq)
 export(rbin_equal_length)
+export(rbin_manual)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,group_by)
@@ -18,6 +20,7 @@ importFrom(magrittr,multiply_by)
 importFrom(magrittr,set_colnames)
 importFrom(magrittr,subtract)
 importFrom(magrittr,use_series)
+importFrom(purrr,prepend)
 importFrom(rlang,"!!")
 importFrom(rlang,enquo)
 importFrom(tibble,tibble)
