--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,12 @@
 S3method(print,rbin_equal_freq)
 S3method(print,rbin_equal_length)
 S3method(print,rbin_manual)
+S3method(print,rbin_quantiles)
 S3method(rbin_equal_freq,default)
 export(rbin_equal_freq)
 export(rbin_equal_length)
 export(rbin_manual)
+export(rbin_quantiles)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,group_by)
