--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,14 @@ S3method(print,rbin_equal_freq)
 S3method(print,rbin_equal_length)
 S3method(print,rbin_manual)
 S3method(print,rbin_quantiles)
+S3method(print,rbin_winsorize)
 S3method(rbin_equal_freq,default)
+S3method(rbin_winsorize,default)
 export(rbin_equal_freq)
 export(rbin_equal_length)
 export(rbin_manual)
 export(rbin_quantiles)
+export(rbin_winsorize)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,group_by)
