--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(rbin_equal_length)
 export(rbin_manual)
 export(rbin_quantiles)
 export(rbin_winsorize)
+importFrom(DescTools,Winsorize)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,group_by)
