--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,4 +29,5 @@ importFrom(magrittr,use_series)
 importFrom(purrr,prepend)
 importFrom(rlang,"!!")
 importFrom(rlang,enquo)
+importFrom(stats,quantile)
 importFrom(tibble,tibble)
