--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(print,rbin_quantiles)
 S3method(print,rbin_winsorize)
 S3method(rbin_equal_freq,default)
 S3method(rbin_winsorize,default)
+export(rbin_create)
 export(rbin_equal_freq)
 export(rbin_equal_length)
 export(rbin_manual)
@@ -27,6 +28,10 @@ importFrom(magrittr,set_colnames)
 importFrom(magrittr,subtract)
 importFrom(magrittr,use_series)
 importFrom(purrr,prepend)
+importFrom(recipes,bake)
+importFrom(recipes,prep)
+importFrom(recipes,recipe)
+importFrom(recipes,step_dummy)
 importFrom(rlang,"!!")
 importFrom(rlang,enquo)
 importFrom(stats,quantile)
