--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(print,rbin_quantiles)
 S3method(print,rbin_winsorize)
 S3method(rbin_equal_freq,default)
 S3method(rbin_winsorize,default)
+export(rbinAddin)
 export(rbin_create)
 export(rbin_equal_freq)
 export(rbin_equal_length)
