--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,13 +15,15 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Imports: 
-	DescTools,
+    DescTools,
     dplyr,
     ggplot2,
     magrittr,
+    miniUI,
     purrr,
     recipes,
     rlang,
+    shiny,
     stats,
     tibble
 Suggests:
