--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,7 @@ Package: rbin
 Type: Package
 Title: Tools for Binning Data
 Version: 0.1.0
-Authors@R: person("Aravind", "Hebbali", email = "hebbali.aravind@gmail.com", role = c("aut", "cre"),
-    comment = c(ORCID = "0000-0001-9220-9669"))
+Authors@R: person("Aravind", "Hebbali", email = "hebbali.aravind@gmail.com", role = c("aut", "cre"))
 Description: Manually bin data using weight of evidence and information value. Includes other binning 
     methods such as equal length, quantile and winsorized. Options for combining levels of categorical
     data are also available. Dummy variables can be generated based on the bins created using any of 
