don't run examples running > 5s

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(print,rbin_manual)
 S3method(print,rbin_quantiles)
 S3method(print,rbin_winsorize)
 S3method(rbin_equal_freq,default)
+S3method(rbin_factor,default)
 S3method(rbin_winsorize,default)
 export(rbinAddin)
 export(rbinFactorAddin)
