--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,3 +29,4 @@ importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(rlang,"!!")
 importFrom(rlang,":=")
+importFrom(utils,globalVariables)
