--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,16 @@ cache: packages
 warnings_are_errors: true
 sudo: false
 
-r:
-    - oldrel
-    - release
-    - devel
+matrix:
+  include:
+  - r: oldrel 
+  - r: release
+  - r: release
+    os: osx
+    osx_image: xcode7.3
+    before_install:
+      - sudo tlmgr install framed titling
+  - r: devel
 
 r_packages:
   - covr
