--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,9 @@ S3method(print,rbin_manual)
 S3method(print,rbin_quantiles)
 S3method(print,rbin_winsorize)
 S3method(rbin_equal_freq,default)
+S3method(rbin_equal_length,default)
 S3method(rbin_factor,default)
+S3method(rbin_manual,default)
 S3method(rbin_winsorize,default)
 export(rbinAddin)
 export(rbinFactorAddin)
@@ -25,8 +27,11 @@ export(rbin_factor_create)
 export(rbin_manual)
 export(rbin_quantiles)
 export(rbin_winsorize)
-importFrom(magrittr,"%<>%")
-importFrom(magrittr,"%>%")
-importFrom(rlang,"!!")
-importFrom(rlang,":=")
+importFrom(data.table,":=")
+importFrom(data.table,data.table)
+importFrom(data.table,setDF)
+importFrom(data.table,setorder)
 importFrom(utils,globalVariables)
+importFrom(utils,install.packages)
+importFrom(utils,menu)
+importFrom(utils,packageVersion)
