fix build errors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,9 +28,11 @@ export(rbin_manual)
 export(rbin_quantiles)
 export(rbin_winsorize)
 importFrom(data.table,":=")
+importFrom(data.table,.N)
 importFrom(data.table,data.table)
 importFrom(data.table,setDF)
 importFrom(data.table,setorder)
+importFrom(stats,na.omit)
 importFrom(utils,globalVariables)
 importFrom(utils,install.packages)
 importFrom(utils,menu)
