--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,9 +12,6 @@ URL: https://github.com/rsquaredacademy/rbin, https://rbin.rsquaredacademy.com
 BugReports: https://github.com/rsquaredacademy/rbin/issues
 Depends: 
     R (>= 3.6)
-Encoding: UTF-8
-LazyData: true
-RoxygenNote: 7.1.0
 Imports: 
     data.table,
     DescTools,
@@ -26,12 +23,13 @@ Suggests:
     graphics,
     knitr,
     miniUI,
+    rlang,
     rmarkdown,
     rstudioapi,
     shiny,
     testthat,
     vdiffr
 VignetteBuilder: knitr
-Remotes:
-    tidyverse/dplyr,
-    r-lib/vctrs
+Encoding: UTF-8
+LazyData: true
+RoxygenNote: 7.1.0
