--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,9 @@
 pandoc: 2.7.2
-pkgdown: 1.4.1
+pkgdown: 1.5.1
 pkgdown_sha: ~
 articles:
   introduction: introduction.html
+last_built: 2020-05-12T08:03Z
 urls:
   reference: https://rbin.rsquaredacademy.com/reference
   article: https://rbin.rsquaredacademy.com/articles
