--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,8 @@ importFrom(data.table,setorder)
 importFrom(stats,na.omit)
 importFrom(stats,quantile)
 importFrom(utils,globalVariables)
+importFrom(utils,head)
 importFrom(utils,install.packages)
 importFrom(utils,menu)
 importFrom(utils,packageVersion)
+importFrom(utils,tail)
