--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(rbin_factor_create)
 export(rbin_manual)
 export(rbin_quantiles)
 export(rbin_winsorize)
+import(ggplot2)
 importFrom(data.table,":=")
 importFrom(data.table,.N)
 importFrom(data.table,data.table)
