--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,9 +25,10 @@ Suggests:
     rmarkdown,
     rstudioapi,
     shiny,
-    testthat,
+    testthat (>= 3.0.0),
     vdiffr
 VignetteBuilder: knitr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+Config/testthat/edition: 3
