--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,10 +1,9 @@
-pandoc: 2.19.2
-pkgdown: 2.0.6
+pandoc: '3.2'
+pkgdown: 2.1.0
 pkgdown_sha: ~
 articles:
   introduction: introduction.html
-last_built: 2023-06-02T10:19Z
+last_built: 2024-11-05T12:04Z
 urls:
   reference: https://rbin.rsquaredacademy.com/reference
   article: https://rbin.rsquaredacademy.com/articles
-
